--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,8 @@ body {
 }
 .logo {
   font-family: "Poppins", sans-serif;
-  font-weight: bold;
+  font-weight: 700;
+  font-size: 1.5rem;
   margin-top: 1rem;
   display: inline-block;
 }
@@ -81,11 +82,24 @@ body {
   color: white;
 }
 
-@media screen and (max-width: 600px) {
-  .content {
-    margin-top: 10rem;
+/*Media Queries*/
+/*Laptop*/
+@media (max-width: 1366px) {
+  html {
+    font-size: 75%;
   }
-  .content_title {
-    font-size: 40px;
+}
+
+/*Tablet*/
+@media (max-width: 768px) {
+  html {
+    font-size: 62.5%;
+  }
+}
+/*Handphone*/
+@media (max-width: 450px) {
+  html,
+  header {
+    font-size: 55%;
   }
 }
